code to fix fixed background on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -5,11 +5,12 @@
 /* Background - for used on secondary pages, with code to fix footer for short content pages */
 
 body {
-    background-color: #e45454;
+    font-family: "Cairo", sans-serif;
+    
+ /*   background-color: #e45454;
     background: url("../assets/images/background95663.jpg") no-repeat center center fixed;
     background-size: cover;
-    font-family: "Cairo", sans-serif;
-
+*/    
     min-height: 100vh;
 
     display: -webkit-box;
@@ -21,22 +22,19 @@ body {
     flex-direction: column;
 }
 
-body:after {
-    content: "";
-    position: fixed;
-    /* stretch a fixed position to the whole screen */
-    top: 0;
-    height: 100vh;
-    /* fix for mobile browser address bar appearing disappearing */
-    left: 0;
-    right: 0;
-    z-index: -1;
-    /* needed to keep in the background */
-/*    background: url("../assets/images/background95663.jpg") center center;*/
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+body:after{
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index:-1; /* needed to keep in the background */
+      background: url("../assets/images/background95663.jpg") center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 
 /* Color Schemes - reusable colour schemes for pages and containers*/
